syntax = "proto3";

option csharp_namespace = "GRPCClient";

service BreedingHorseCollector{
	rpc GetHorsesFromBreedings (HorseCollectorRequestModel) returns (HorseCollectorResponseModel);
	rpc GetBreedings (BreedingCollectorRequestModel) returns (BreedingCollectorResponseModel);
	rpc GetFilteredHorsesFromBreedings (FilterHorsesRequestModel) returns (stream FilterHorsesResponseModel);
}

message HorseCollectorRequestModel{
   repeated string BreedingIds = 1;
   string UserId = 2;
   string Server = 3;
}

message HorseCollectorResponseModel
{    
    repeated string HorseIds = 1;
}

message BreedingCollectorRequestModel
{
    string UserId = 1;
    string Server = 2;
}

message BreedingCollectorResponseModel{
   repeated BreedingModel Breedings = 1;
}

message BreedingModel
{
    string BreedingId = 1;
    string BreedingName = 2;
}

message FilterHorsesRequestModel
{
    repeated string BreedingIds = 1;
    string UserId = 2;
    string Server = 3;
}

message FilterHorsesResponseModel
{
   string HorseId = 1;
}

enum HorseSex
{
   Male = 0;
   Female = 1;
}
